--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,27 @@ function updateTimerDisplay(){
     // Update current time text display.
     $('#current-time').text(formatTime( player.getCurrentTime() ));
     $('#duration').text(formatTime( player.getDuration() ));
+
+    //se acabou o video
+    if(formatTime( player.getCurrentTime()) == formatTime( player.getDuration())) {
+        
+        var jqxhr = $.ajax({
+            url: 'http://192.168.50.36:8080/musicas/' + player.getVideoUrl().split('=')[1],
+            method: 'delete'
+        });
+        jqxhr.done(function () {
+            
+           var jqxhr_1 = $.ajax({
+                url: 'http://192.168.50.36:8080/musicas/',
+                method: 'GET'
+            });
+            jqxhr_1.done(function() {
+                player.player.loadVideoByUrl("Yu0Uk2DHtVw");
+                player.playVideo();
+            })            
+        });
+
+    }
 }
 
 
