Incluida mais info da musica

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,14 @@
 <body ng-controller="radioController">
     <input type="hidden" id="txtFirst" value="{{firstToRun}}">
     <input type="button" id="btnApagaAtual" ng-click="apagarMusicaAtual()">
+    <center>
+        <h3>
+            <p>Usuario: {{usuario}}</p>
+            <p>Sala: {{sala}}</p>
+            <p>Genero: {{genero}}</p>
+            <p>Titulo: {{titulo}}</p>
+        </h3>
+    </center>
 </body>
 
 
